--- a/app.json
+++ b/app.json
@@ -49,7 +49,7 @@
     "extra": {
       "router": {},
       "eas": {
-        "projectId": ""
+        "projectId": "58645252-b9aa-4a09-a92f-0ddff26653bc"
       }
     }
   }
